--- a/SignUp.html
+++ b/SignUp.html
@@ -6,65 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-     <link rel="stylesheet" href="css/signUp.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/signUp.css">
+
     <title>Sign Up</title>
 </head>
 <body class="body">
-<form class="form-group">
-
-    <div class="container white">
-       <div  class="header">
-            <h1>Sign Up</h1>
-            <p>Please fill the form below</p>
-        </div>
-        <form class="form-body" id="registration-form" onsubmit="return false;">
-        <div class="footer">
-
-                <div class="row">
-                    <div class="col-sm-4">
-                        <input type="text" class="input-box" placeholder="First name" name="first-name">
-
-                    </div>
-                    <div class="col-sm-4">
-                        <input  type="text" class="input-box" placeholder="Last name" name="last-name">
-
-                    </div>
+<div class="container white">
+    <form>
+        <div class="form-holder">
+            <div class="header">
+                <h1 class="head">Sign Up</h1>
+                <div class="subhead">Please fill up the form!</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <input class="form-control input-margin " name="first-name" placeholder="First Name" type="text">
                 </div>
-                    <div class="email">
-                        <input type="email" class="form-control" placeholder="Email">
-
-                    </div>
-                    <div class="password">
-                        <input type="email" class="form-control" placeholder="Password">
-
-                    </div>
-                    <div class="confirm password">
-                        <input type="email" class="form-control" placeholder="Confirm Password">
-
+                <div class="col-sm-6">
+                    <input class=" form-control input-margin " name="last-name" placeholder="Last Name"
+                           type="text">
                 </div>
-
+            </div>
+            <input class="form-control input-margin" placeholder="Email" type="email">
+            <input class="form-control input-margin" placeholder="Password" type="password">
+            <input class="form-control input-margin" placeholder="Confirm Password" type="password">
+                <input type="checkbox"  class="input-margin" aria-label="Checkbox for following text input"
+                       aria-labelledby="terms-and-conditions">
+                <label>I accept the <a href="">The terms of use</a> &amp; <a href="">privacy policy</a>.</label>
+                <div>
+                    <button class="btn btn-primary button margin" type="button">Sign Up</button>
                 </div>
-            <button type="button" class="btn btn-primary">Sign Up</button>
-
-
-
-        </form>
-
-
-
-
-
-
-
-
-
+            </div>
+    </form>
+</div>
+<div class="login-here">
+    Already have an account? <a href="">Login here</a>
+</div>
 
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </body>
 </html>
